python-client-generated/v1.2.1/README.md
# tmi-client

A RESTful API for collaborative threat modeling with full X6 graph library compatibility. This API provides schemas that align with AntV X6 cell object models for seamless integration with modern diagramming libraries. Supports OAuth 2.0 authentication with client callback integration for seamless single-page application authentication flows.

## API Design v1.1.0

### Authorization Model

TMI uses hierarchical authorization: access control is defined at the ThreatModel level via the authorization field (readers, writers, owners). All child resources (Assets, Diagrams, Documents, Notes, Repositories, Threats) inherit permissions from their parent ThreatModel. This simplifies permission management and ensures consistent access control.

### Bulk Operations

Notes and Diagrams do not support bulk operations due to their unique creation workflows and lack of valid bulk use cases. All other resources (Threats, Assets, Documents, Repositories) support full bulk operations: POST (create), PUT (upsert), PATCH (partial update), DELETE (batch delete).

All resources support bulk metadata operations regardless of resource-level bulk support.

### List Response Strategy

- ThreatModels return summary information (TMListItem) because they contain many child objects that can be large.
- Diagrams return summary information (DiagramListItem) because diagram data (cells, images) can be large.
- Notes return summary information (NoteListItem) because the content field can be large.
- Threats, Assets, Documents, Repositories return full schemas as they are relatively small and static.

### PATCH Support

All resources support PATCH for partial updates using JSON Patch (RFC 6902). This is particularly useful for:

- Assets: Array field updates (affected_assets, trust_boundaries) ensuring no duplicates
- Notes: Updating name/description without changing content field
- All resources: Efficient updates without full object replacement

This Python package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 1.2.1
- Package version: 1.2.1
- Build date: 2026-04-15T12:49:56.521993-04:00[America/New_York]
- Generator version: 7.21.0
- Build package: org.openapitools.codegen.languages.PythonClientCodegen
  For more information, please visit [https://github.com/ericfitz/tmi](https://github.com/ericfitz/tmi)

## Requirements.

Python 3.10+

## Installation & Usage

### pip install

If the python package is hosted on a repository, you can install directly using:

```sh
pip install git+https://github.com/ericfitz/tmi-clients.git
```

(you may need to run `pip` with root permission: `sudo pip install git+https://github.com/ericfitz/tmi-clients.git`)

Then import the package:

```python
import tmi_client
```

### Setuptools

Install via [Setuptools](http://pypi.python.org/pypi/setuptools).

```sh
python setup.py install --user
```

(or `sudo python setup.py install` to install the package for all users)

Then import the package:

```python
import tmi_client
```

### Tests

Execute `pytest` to run the tests.

## Getting Started

Please follow the [installation procedure](#installation--usage) and then run the following:

```python

import tmi_client
from tmi_client.rest import ApiException
from pprint import pprint

# Defining the host is optional and defaults to https://api.tmi.dev
# See configuration.py for a list of all supported configuration parameters.
configuration = tmi_client.Configuration(
    host = "https://api.tmi.dev"
)

# The client must configure the authentication and authorization parameters
# in accordance with the API server security policy.
# Examples for each auth method are provided below, use the example that
# satisfies your auth use case.

# Configure Bearer authorization (JWT): bearerAuth
configuration = tmi_client.Configuration(
    access_token = os.environ["BEARER_TOKEN"]
)


# Enter a context with an instance of the API client
with tmi_client.ApiClient(configuration) as api_client:
    # Create an instance of the API class
    api_instance = tmi_client.AddonsApi(api_client)
    create_addon_request = tmi_client.CreateAddonRequest() # CreateAddonRequest | Addon registration details

    try:
        # Create add-on
        api_response = api_instance.create_addon(create_addon_request)
        print("The response of AddonsApi->create_addon:\n")
        pprint(api_response)
    except ApiException as e:
        print("Exception when calling AddonsApi->create_addon: %s\n" % e)

```

## Documentation for API Endpoints

All URIs are relative to *https://api.tmi.dev*

| Class                        | Method                                                                                                                      | HTTP request                                                                            | Description                                      |
| ---------------------------- | --------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------- | ------------------------------------------------ |
| _AddonsApi_                  | [**create_addon**](docs/AddonsApi.md#create_addon)                                                                          | **POST** /addons                                                                        | Create add-on                                    |
| _AddonsApi_                  | [**delete_addon**](docs/AddonsApi.md#delete_addon)                                                                          | **DELETE** /addons/{id}                                                                 | Delete add-on                                    |
| _AddonsApi_                  | [**get_addon**](docs/AddonsApi.md#get_addon)                                                                                | **GET** /addons/{id}                                                                    | Get add-on                                       |
| _AddonsApi_                  | [**get_invocation**](docs/AddonsApi.md#get_invocation)                                                                      | **GET** /invocations/{id}                                                               | Get invocation                                   |
| _AddonsApi_                  | [**invoke_addon**](docs/AddonsApi.md#invoke_addon)                                                                          | **POST** /addons/{id}/invoke                                                            | Invoke add-on                                    |
| _AddonsApi_                  | [**list_addons**](docs/AddonsApi.md#list_addons)                                                                            | **GET** /addons                                                                         | List add-ons                                     |
| _AddonsApi_                  | [**list_invocations**](docs/AddonsApi.md#list_invocations)                                                                  | **GET** /invocations                                                                    | List invocations                                 |
| _AddonsApi_                  | [**update_invocation_status**](docs/AddonsApi.md#update_invocation_status)                                                  | **POST** /invocations/{id}/status                                                       | Update invocation status                         |
| _AdministrationApi_          | [**add_group_member**](docs/AdministrationApi.md#add_group_member)                                                          | **POST** /admin/groups/{internal_uuid}/members                                          | Add member to group                              |
| _AdministrationApi_          | [**create_admin_group**](docs/AdministrationApi.md#create_admin_group)                                                      | **POST** /admin/groups                                                                  | Create provider-independent group                |
| _AdministrationApi_          | [**delete_addon_invocation_quota**](docs/AdministrationApi.md#delete_addon_invocation_quota)                                | **DELETE** /admin/quotas/addons/{user_id}                                               | Delete addon invocation quota                    |
| _AdministrationApi_          | [**delete_admin_group**](docs/AdministrationApi.md#delete_admin_group)                                                      | **DELETE** /admin/groups/{internal_uuid}                                                | Delete group                                     |
| _AdministrationApi_          | [**delete_admin_user**](docs/AdministrationApi.md#delete_admin_user)                                                        | **DELETE** /admin/users/{internal_uuid}                                                 | Delete user                                      |
| _AdministrationApi_          | [**delete_system_setting**](docs/AdministrationApi.md#delete_system_setting)                                                | **DELETE** /admin/settings/{key}                                                        | Delete system setting                            |
| _AdministrationApi_          | [**delete_user_api_quota**](docs/AdministrationApi.md#delete_user_api_quota)                                                | **DELETE** /admin/quotas/users/{user_id}                                                | Delete user API quota                            |
| _AdministrationApi_          | [**delete_webhook_quota**](docs/AdministrationApi.md#delete_webhook_quota)                                                  | **DELETE** /admin/quotas/webhooks/{user_id}                                             | Delete webhook quota                             |
| _AdministrationApi_          | [**get_addon_invocation_quota**](docs/AdministrationApi.md#get_addon_invocation_quota)                                      | **GET** /admin/quotas/addons/{user_id}                                                  | Get addon invocation quota                       |
| _AdministrationApi_          | [**get_admin_group**](docs/AdministrationApi.md#get_admin_group)                                                            | **GET** /admin/groups/{internal_uuid}                                                   | Get group details                                |
| _AdministrationApi_          | [**get_admin_user**](docs/AdministrationApi.md#get_admin_user)                                                              | **GET** /admin/users/{internal_uuid}                                                    | Get user details                                 |
| _AdministrationApi_          | [**get_system_setting**](docs/AdministrationApi.md#get_system_setting)                                                      | **GET** /admin/settings/{key}                                                           | Get system setting                               |
| _AdministrationApi_          | [**get_user_api_quota**](docs/AdministrationApi.md#get_user_api_quota)                                                      | **GET** /admin/quotas/users/{user_id}                                                   | Get user API quota                               |
| _AdministrationApi_          | [**get_webhook_quota**](docs/AdministrationApi.md#get_webhook_quota)                                                        | **GET** /admin/quotas/webhooks/{user_id}                                                | Get webhook quota                                |
| _AdministrationApi_          | [**list_addon_invocation_quotas**](docs/AdministrationApi.md#list_addon_invocation_quotas)                                  | **GET** /admin/quotas/addons                                                            | List all addon invocation quotas                 |
| _AdministrationApi_          | [**list_admin_groups**](docs/AdministrationApi.md#list_admin_groups)                                                        | **GET** /admin/groups                                                                   | List groups                                      |
| _AdministrationApi_          | [**list_admin_users**](docs/AdministrationApi.md#list_admin_users)                                                          | **GET** /admin/users                                                                    | List users                                       |
| _AdministrationApi_          | [**list_group_members**](docs/AdministrationApi.md#list_group_members)                                                      | **GET** /admin/groups/{internal_uuid}/members                                           | List group members                               |
| _AdministrationApi_          | [**list_system_settings**](docs/AdministrationApi.md#list_system_settings)                                                  | **GET** /admin/settings                                                                 | List system settings                             |
| _AdministrationApi_          | [**list_user_api_quotas**](docs/AdministrationApi.md#list_user_api_quotas)                                                  | **GET** /admin/quotas/users                                                             | List all user API quotas                         |
| _AdministrationApi_          | [**list_webhook_quotas**](docs/AdministrationApi.md#list_webhook_quotas)                                                    | **GET** /admin/quotas/webhooks                                                          | List all webhook quotas                          |
| _AdministrationApi_          | [**migrate_system_settings**](docs/AdministrationApi.md#migrate_system_settings)                                            | **POST** /admin/settings/migrate                                                        | Migrate settings from configuration              |
| _AdministrationApi_          | [**reencrypt_system_settings**](docs/AdministrationApi.md#reencrypt_system_settings)                                        | **POST** /admin/settings/reencrypt                                                      | Re-encrypt all system settings                   |
| _AdministrationApi_          | [**remove_group_member**](docs/AdministrationApi.md#remove_group_member)                                                    | **DELETE** /admin/groups/{internal_uuid}/members/{member_uuid}                          | Remove member from group                         |
| _AdministrationApi_          | [**transfer_admin_user_ownership**](docs/AdministrationApi.md#transfer_admin_user_ownership)                                | **POST** /admin/users/{internal_uuid}/transfer                                          | Transfer user ownership to another user          |
| _AdministrationApi_          | [**update_addon_invocation_quota**](docs/AdministrationApi.md#update_addon_invocation_quota)                                | **PUT** /admin/quotas/addons/{user_id}                                                  | Update addon invocation quota                    |
| _AdministrationApi_          | [**update_admin_group**](docs/AdministrationApi.md#update_admin_group)                                                      | **PATCH** /admin/groups/{internal_uuid}                                                 | Update group metadata                            |
| _AdministrationApi_          | [**update_admin_user**](docs/AdministrationApi.md#update_admin_user)                                                        | **PATCH** /admin/users/{internal_uuid}                                                  | Update user metadata                             |
| _AdministrationApi_          | [**update_system_setting**](docs/AdministrationApi.md#update_system_setting)                                                | **PUT** /admin/settings/{key}                                                           | Update system setting                            |
| _AdministrationApi_          | [**update_user_api_quota**](docs/AdministrationApi.md#update_user_api_quota)                                                | **PUT** /admin/quotas/users/{user_id}                                                   | Update user API quota                            |
| _AdministrationApi_          | [**update_webhook_quota**](docs/AdministrationApi.md#update_webhook_quota)                                                  | **PUT** /admin/quotas/webhooks/{user_id}                                                | Update webhook quota                             |
| _AssetsApi_                  | [**patch_threat_model_asset**](docs/AssetsApi.md#patch_threat_model_asset)                                                  | **PATCH** /threat_models/{threat_model_id}/assets/{asset_id}                            | Partially update asset                           |
| _AuthenticationApi_          | [**authorize_o_auth_provider**](docs/AuthenticationApi.md#authorize_o_auth_provider)                                        | **GET** /oauth2/authorize                                                               | Initiate OAuth authorization flow                |
| _AuthenticationApi_          | [**create_current_user_client_credential**](docs/AuthenticationApi.md#create_current_user_client_credential)                | **POST** /me/client_credentials                                                         | Create client credential                         |
| _AuthenticationApi_          | [**delete_current_user_client_credential**](docs/AuthenticationApi.md#delete_current_user_client_credential)                | **DELETE** /me/client_credentials/{id}                                                  | Delete client credential                         |
| _AuthenticationApi_          | [**exchange_o_auth_code**](docs/AuthenticationApi.md#exchange_o_auth_code)                                                  | **POST** /oauth2/token                                                                  | Exchange OAuth credentials for JWT tokens        |
| _AuthenticationApi_          | [**get_auth_providers**](docs/AuthenticationApi.md#get_auth_providers)                                                      | **GET** /oauth2/providers                                                               | List available OAuth providers                   |
| _AuthenticationApi_          | [**get_current_user**](docs/AuthenticationApi.md#get_current_user)                                                          | **GET** /oauth2/userinfo                                                                | Get current user information                     |
| _AuthenticationApi_          | [**get_current_user_profile**](docs/AuthenticationApi.md#get_current_user_profile)                                          | **GET** /me                                                                             | Get current user profile                         |
| _AuthenticationApi_          | [**get_provider_groups**](docs/AuthenticationApi.md#get_provider_groups)                                                    | **GET** /oauth2/providers/{idp}/groups                                                  | Get groups for identity provider                 |
| _AuthenticationApi_          | [**get_saml_metadata**](docs/AuthenticationApi.md#get_saml_metadata)                                                        | **GET** /saml/{provider}/metadata                                                       | Get SAML service provider metadata               |
| _AuthenticationApi_          | [**get_saml_providers**](docs/AuthenticationApi.md#get_saml_providers)                                                      | **GET** /saml/providers                                                                 | List available SAML providers                    |
| _AuthenticationApi_          | [**handle_o_auth_callback**](docs/AuthenticationApi.md#handle_o_auth_callback)                                              | **GET** /oauth2/callback                                                                | Handle OAuth callback                            |
| _AuthenticationApi_          | [**initiate_saml_login**](docs/AuthenticationApi.md#initiate_saml_login)                                                    | **GET** /saml/{provider}/login                                                          | Initiate SAML authentication                     |
| _AuthenticationApi_          | [**introspect_token**](docs/AuthenticationApi.md#introspect_token)                                                          | **POST** /oauth2/introspect                                                             | Token Introspection                              |
| _AuthenticationApi_          | [**list_current_user_client_credentials**](docs/AuthenticationApi.md#list_current_user_client_credentials)                  | **GET** /me/client_credentials                                                          | List client credentials                          |
| _AuthenticationApi_          | [**list_my_group_members**](docs/AuthenticationApi.md#list_my_group_members)                                                | **GET** /me/groups/{internal_uuid}/members                                              | List members of my group                         |
| _AuthenticationApi_          | [**list_my_groups**](docs/AuthenticationApi.md#list_my_groups)                                                              | **GET** /me/groups                                                                      | List my groups                                   |
| _AuthenticationApi_          | [**process_saml_logout**](docs/AuthenticationApi.md#process_saml_logout)                                                    | **GET** /saml/slo                                                                       | SAML Single Logout                               |
| _AuthenticationApi_          | [**process_saml_logout_post**](docs/AuthenticationApi.md#process_saml_logout_post)                                          | **POST** /saml/slo                                                                      | SAML Single Logout (POST)                        |
| _AuthenticationApi_          | [**process_saml_response**](docs/AuthenticationApi.md#process_saml_response)                                                | **POST** /saml/acs                                                                      | SAML Assertion Consumer Service                  |
| _AuthenticationApi_          | [**refresh_token**](docs/AuthenticationApi.md#refresh_token)                                                                | **POST** /oauth2/refresh                                                                | Refresh JWT token                                |
| _AuthenticationApi_          | [**revoke_token**](docs/AuthenticationApi.md#revoke_token)                                                                  | **POST** /oauth2/revoke                                                                 | Revoke token                                     |
| _CollaborationApi_           | [**create_diagram_collaboration_session**](docs/CollaborationApi.md#create_diagram_collaboration_session)                   | **POST** /threat_models/{threat_model_id}/diagrams/{diagram_id}/collaborate             | Create diagram collaboration session             |
| _CollaborationApi_           | [**end_diagram_collaboration_session**](docs/CollaborationApi.md#end_diagram_collaboration_session)                         | **DELETE** /threat_models/{threat_model_id}/diagrams/{diagram_id}/collaborate           | End diagram collaboration session                |
| _CollaborationApi_           | [**get_current_user_sessions**](docs/CollaborationApi.md#get_current_user_sessions)                                         | **GET** /me/sessions                                                                    | List active collaboration sessions               |
| _CollaborationApi_           | [**get_diagram_collaboration_session**](docs/CollaborationApi.md#get_diagram_collaboration_session)                         | **GET** /threat_models/{threat_model_id}/diagrams/{diagram_id}/collaborate              | Get diagram collaboration session                |
| _ConfigurationApi_           | [**get_client_config**](docs/ConfigurationApi.md#get_client_config)                                                         | **GET** /config                                                                         | Get client configuration                         |
| _DocumentsApi_               | [**patch_threat_model_document**](docs/DocumentsApi.md#patch_threat_model_document)                                         | **PATCH** /threat_models/{threat_model_id}/documents/{document_id}                      | Partially update document                        |
| _GeneralApi_                 | [**get_api_info**](docs/GeneralApi.md#get_api_info)                                                                         | **GET** /                                                                               | Get API information                              |
| _NotesApi_                   | [**patch_threat_model_note**](docs/NotesApi.md#patch_threat_model_note)                                                     | **PATCH** /threat_models/{threat_model_id}/notes/{note_id}                              | Partially update note                            |
| _OAuthDiscoveryApi_          | [**get_o_auth_protected_resource_metadata**](docs/OAuthDiscoveryApi.md#get_o_auth_protected_resource_metadata)              | **GET** /.well-known/oauth-protected-resource                                           | OAuth 2.0 Protected Resource Metadata            |
| _OIDCDiscoveryApi_           | [**get_jwks**](docs/OIDCDiscoveryApi.md#get_jwks)                                                                           | **GET** /.well-known/jwks.json                                                          | JSON Web Key Set                                 |
| _OIDCDiscoveryApi_           | [**get_o_auth_authorization_server_metadata**](docs/OIDCDiscoveryApi.md#get_o_auth_authorization_server_metadata)           | **GET** /.well-known/oauth-authorization-server                                         | OAuth 2.0 Authorization Server Metadata          |
| _OIDCDiscoveryApi_           | [**get_open_id_configuration**](docs/OIDCDiscoveryApi.md#get_open_id_configuration)                                         | **GET** /.well-known/openid-configuration                                               | OpenID Connect Discovery Configuration           |
| _ProjectsApi_                | [**bulk_create_project_metadata**](docs/ProjectsApi.md#bulk_create_project_metadata)                                        | **POST** /projects/{project_id}/metadata/bulk                                           | Bulk create project metadata                     |
| _ProjectsApi_                | [**bulk_replace_project_metadata**](docs/ProjectsApi.md#bulk_replace_project_metadata)                                      | **PUT** /projects/{project_id}/metadata/bulk                                            | Bulk replace project metadata                    |
| _ProjectsApi_                | [**bulk_upsert_project_metadata**](docs/ProjectsApi.md#bulk_upsert_project_metadata)                                        | **PATCH** /projects/{project_id}/metadata/bulk                                          | Bulk upsert project metadata                     |
| _ProjectsApi_                | [**create_project**](docs/ProjectsApi.md#create_project)                                                                    | **POST** /projects                                                                      | Create a project                                 |
| _ProjectsApi_                | [**create_project_metadata**](docs/ProjectsApi.md#create_project_metadata)                                                  | **POST** /projects/{project_id}/metadata                                                | Create project metadata                          |
| _ProjectsApi_                | [**delete_project**](docs/ProjectsApi.md#delete_project)                                                                    | **DELETE** /projects/{project_id}                                                       | Delete a project                                 |
| _ProjectsApi_                | [**delete_project_metadata**](docs/ProjectsApi.md#delete_project_metadata)                                                  | **DELETE** /projects/{project_id}/metadata/{key}                                        | Delete project metadata                          |
| _ProjectsApi_                | [**get_project**](docs/ProjectsApi.md#get_project)                                                                          | **GET** /projects/{project_id}                                                          | Get a project                                    |
| _ProjectsApi_                | [**get_project_metadata**](docs/ProjectsApi.md#get_project_metadata)                                                        | **GET** /projects/{project_id}/metadata                                                 | Get project metadata                             |
| _ProjectsApi_                | [**list_projects**](docs/ProjectsApi.md#list_projects)                                                                      | **GET** /projects                                                                       | List projects                                    |
| _ProjectsApi_                | [**patch_project**](docs/ProjectsApi.md#patch_project)                                                                      | **PATCH** /projects/{project_id}                                                        | Patch a project                                  |
| _ProjectsApi_                | [**update_project**](docs/ProjectsApi.md#update_project)                                                                    | **PUT** /projects/{project_id}                                                          | Update a project                                 |
| _ProjectsApi_                | [**update_project_metadata**](docs/ProjectsApi.md#update_project_metadata)                                                  | **PUT** /projects/{project_id}/metadata/{key}                                           | Update project metadata                          |
| _RepositoriesApi_            | [**patch_threat_model_repository**](docs/RepositoriesApi.md#patch_threat_model_repository)                                  | **PATCH** /threat_models/{threat_model_id}/repositories/{repository_id}                 | Partially update repository                      |
| _SAMLApi_                    | [**list_saml_users**](docs/SAMLApi.md#list_saml_users)                                                                      | **GET** /saml/providers/{idp}/users                                                     | List SAML users for UI autocomplete              |
| _SurveyAdministrationApi_    | [**bulk_create_admin_survey_metadata**](docs/SurveyAdministrationApi.md#bulk_create_admin_survey_metadata)                  | **POST** /admin/surveys/{survey_id}/metadata/bulk                                       | Bulk create metadata for a survey                |
| _SurveyAdministrationApi_    | [**bulk_replace_admin_survey_metadata**](docs/SurveyAdministrationApi.md#bulk_replace_admin_survey_metadata)                | **PUT** /admin/surveys/{survey_id}/metadata/bulk                                        | Bulk replace metadata for a survey               |
| _SurveyAdministrationApi_    | [**bulk_upsert_admin_survey_metadata**](docs/SurveyAdministrationApi.md#bulk_upsert_admin_survey_metadata)                  | **PATCH** /admin/surveys/{survey_id}/metadata/bulk                                      | Bulk upsert metadata for a survey                |
| _SurveyAdministrationApi_    | [**create_admin_survey**](docs/SurveyAdministrationApi.md#create_admin_survey)                                              | **POST** /admin/surveys                                                                 | Create a survey                                  |
| _SurveyAdministrationApi_    | [**create_admin_survey_metadata**](docs/SurveyAdministrationApi.md#create_admin_survey_metadata)                            | **POST** /admin/surveys/{survey_id}/metadata                                            | Add metadata to a survey                         |
| _SurveyAdministrationApi_    | [**delete_admin_survey**](docs/SurveyAdministrationApi.md#delete_admin_survey)                                              | **DELETE** /admin/surveys/{survey_id}                                                   | Delete a survey                                  |
| _SurveyAdministrationApi_    | [**delete_admin_survey_metadata_by_key**](docs/SurveyAdministrationApi.md#delete_admin_survey_metadata_by_key)              | **DELETE** /admin/surveys/{survey_id}/metadata/{key}                                    | Delete metadata by key for a survey              |
| _SurveyAdministrationApi_    | [**get_admin_survey**](docs/SurveyAdministrationApi.md#get_admin_survey)                                                    | **GET** /admin/surveys/{survey_id}                                                      | Get a survey                                     |
| _SurveyAdministrationApi_    | [**get_admin_survey_metadata**](docs/SurveyAdministrationApi.md#get_admin_survey_metadata)                                  | **GET** /admin/surveys/{survey_id}/metadata                                             | Get all metadata for a survey                    |
| _SurveyAdministrationApi_    | [**get_admin_survey_metadata_by_key**](docs/SurveyAdministrationApi.md#get_admin_survey_metadata_by_key)                    | **GET** /admin/surveys/{survey_id}/metadata/{key}                                       | Get metadata by key for a survey                 |
| _SurveyAdministrationApi_    | [**list_admin_surveys**](docs/SurveyAdministrationApi.md#list_admin_surveys)                                                | **GET** /admin/surveys                                                                  | List surveys                                     |
| _SurveyAdministrationApi_    | [**patch_admin_survey**](docs/SurveyAdministrationApi.md#patch_admin_survey)                                                | **PATCH** /admin/surveys/{survey_id}                                                    | Partially update a survey                        |
| _SurveyAdministrationApi_    | [**update_admin_survey**](docs/SurveyAdministrationApi.md#update_admin_survey)                                              | **PUT** /admin/surveys/{survey_id}                                                      | Update a survey                                  |
| _SurveyAdministrationApi_    | [**update_admin_survey_metadata_by_key**](docs/SurveyAdministrationApi.md#update_admin_survey_metadata_by_key)              | **PUT** /admin/surveys/{survey_id}/metadata/{key}                                       | Update metadata by key for a survey              |
| _SurveyIntakeApi_            | [**bulk_create_intake_survey_response_metadata**](docs/SurveyIntakeApi.md#bulk_create_intake_survey_response_metadata)      | **POST** /intake/survey_responses/{survey_response_id}/metadata/bulk                    | Bulk create metadata for a survey response       |
| _SurveyIntakeApi_            | [**bulk_replace_intake_survey_response_metadata**](docs/SurveyIntakeApi.md#bulk_replace_intake_survey_response_metadata)    | **PUT** /intake/survey_responses/{survey_response_id}/metadata/bulk                     | Bulk replace metadata for a survey response      |
| _SurveyIntakeApi_            | [**bulk_upsert_intake_survey_response_metadata**](docs/SurveyIntakeApi.md#bulk_upsert_intake_survey_response_metadata)      | **PATCH** /intake/survey_responses/{survey_response_id}/metadata/bulk                   | Bulk upsert metadata for a survey response       |
| _SurveyIntakeApi_            | [**create_intake_survey_response**](docs/SurveyIntakeApi.md#create_intake_survey_response)                                  | **POST** /intake/survey_responses                                                       | Create survey response                           |
| _SurveyIntakeApi_            | [**create_intake_survey_response_metadata**](docs/SurveyIntakeApi.md#create_intake_survey_response_metadata)                | **POST** /intake/survey_responses/{survey_response_id}/metadata                         | Add metadata to a survey response                |
| _SurveyIntakeApi_            | [**delete_intake_survey_response**](docs/SurveyIntakeApi.md#delete_intake_survey_response)                                  | **DELETE** /intake/survey_responses/{survey_response_id}                                | Delete survey response                           |
| _SurveyIntakeApi_            | [**delete_intake_survey_response_metadata_by_key**](docs/SurveyIntakeApi.md#delete_intake_survey_response_metadata_by_key)  | **DELETE** /intake/survey_responses/{survey_response_id}/metadata/{key}                 | Delete metadata by key for a survey response     |
| _SurveyIntakeApi_            | [**get_intake_survey**](docs/SurveyIntakeApi.md#get_intake_survey)                                                          | **GET** /intake/surveys/{survey_id}                                                     | Get an available survey                          |
| _SurveyIntakeApi_            | [**get_intake_survey_response**](docs/SurveyIntakeApi.md#get_intake_survey_response)                                        | **GET** /intake/survey_responses/{survey_response_id}                                   | Get survey response                              |
| _SurveyIntakeApi_            | [**get_intake_survey_response_metadata**](docs/SurveyIntakeApi.md#get_intake_survey_response_metadata)                      | **GET** /intake/survey_responses/{survey_response_id}/metadata                          | Get all metadata for a survey response           |
| _SurveyIntakeApi_            | [**get_intake_survey_response_metadata_by_key**](docs/SurveyIntakeApi.md#get_intake_survey_response_metadata_by_key)        | **GET** /intake/survey_responses/{survey_response_id}/metadata/{key}                    | Get metadata by key for a survey response        |
| _SurveyIntakeApi_            | [**get_intake_survey_response_triage_note**](docs/SurveyIntakeApi.md#get_intake_survey_response_triage_note)                | **GET** /intake/survey_responses/{survey_response_id}/triage_notes/{triage_note_id}     | Get a specific triage note                       |
| _SurveyIntakeApi_            | [**list_intake_survey_response_triage_notes**](docs/SurveyIntakeApi.md#list_intake_survey_response_triage_notes)            | **GET** /intake/survey_responses/{survey_response_id}/triage_notes                      | List triage notes for a survey response          |
| _SurveyIntakeApi_            | [**list_intake_survey_responses**](docs/SurveyIntakeApi.md#list_intake_survey_responses)                                    | **GET** /intake/survey_responses                                                        | List user&#39;s survey responses                 |
| _SurveyIntakeApi_            | [**list_intake_surveys**](docs/SurveyIntakeApi.md#list_intake_surveys)                                                      | **GET** /intake/surveys                                                                 | List available surveys                           |
| _SurveyIntakeApi_            | [**patch_intake_survey_response**](docs/SurveyIntakeApi.md#patch_intake_survey_response)                                    | **PATCH** /intake/survey_responses/{survey_response_id}                                 | Partial update survey response                   |
| _SurveyIntakeApi_            | [**update_intake_survey_response**](docs/SurveyIntakeApi.md#update_intake_survey_response)                                  | **PUT** /intake/survey_responses/{survey_response_id}                                   | Update survey response                           |
| _SurveyIntakeApi_            | [**update_intake_survey_response_metadata_by_key**](docs/SurveyIntakeApi.md#update_intake_survey_response_metadata_by_key)  | **PUT** /intake/survey_responses/{survey_response_id}/metadata/{key}                    | Update metadata by key for a survey response     |
| _SurveyTriageApi_            | [**create_threat_model_from_survey_response**](docs/SurveyTriageApi.md#create_threat_model_from_survey_response)            | **POST** /triage/survey_responses/{survey_response_id}/create_threat_model              | Create threat model from survey response         |
| _SurveyTriageApi_            | [**create_triage_survey_response_triage_note**](docs/SurveyTriageApi.md#create_triage_survey_response_triage_note)          | **POST** /triage/survey_responses/{survey_response_id}/triage_notes                     | Create a triage note                             |
| _SurveyTriageApi_            | [**get_triage_survey_response**](docs/SurveyTriageApi.md#get_triage_survey_response)                                        | **GET** /triage/survey_responses/{survey_response_id}                                   | Get survey response for triage                   |
| _SurveyTriageApi_            | [**get_triage_survey_response_metadata**](docs/SurveyTriageApi.md#get_triage_survey_response_metadata)                      | **GET** /triage/survey_responses/{survey_response_id}/metadata                          | Get all metadata for a survey response           |
| _SurveyTriageApi_            | [**get_triage_survey_response_metadata_by_key**](docs/SurveyTriageApi.md#get_triage_survey_response_metadata_by_key)        | **GET** /triage/survey_responses/{survey_response_id}/metadata/{key}                    | Get metadata by key for a survey response        |
| _SurveyTriageApi_            | [**get_triage_survey_response_triage_note**](docs/SurveyTriageApi.md#get_triage_survey_response_triage_note)                | **GET** /triage/survey_responses/{survey_response_id}/triage_notes/{triage_note_id}     | Get a specific triage note                       |
| _SurveyTriageApi_            | [**list_triage_survey_response_triage_notes**](docs/SurveyTriageApi.md#list_triage_survey_response_triage_notes)            | **GET** /triage/survey_responses/{survey_response_id}/triage_notes                      | List triage notes for a survey response          |
| _SurveyTriageApi_            | [**list_triage_survey_responses**](docs/SurveyTriageApi.md#list_triage_survey_responses)                                    | **GET** /triage/survey_responses                                                        | List survey responses for triage                 |
| _SurveyTriageApi_            | [**patch_triage_survey_response**](docs/SurveyTriageApi.md#patch_triage_survey_response)                                    | **PATCH** /triage/survey_responses/{survey_response_id}                                 | Partial update survey response for triage        |
| _TeamsApi_                   | [**bulk_create_team_metadata**](docs/TeamsApi.md#bulk_create_team_metadata)                                                 | **POST** /teams/{team_id}/metadata/bulk                                                 | Bulk create team metadata                        |
| _TeamsApi_                   | [**bulk_replace_team_metadata**](docs/TeamsApi.md#bulk_replace_team_metadata)                                               | **PUT** /teams/{team_id}/metadata/bulk                                                  | Bulk replace team metadata                       |
| _TeamsApi_                   | [**bulk_upsert_team_metadata**](docs/TeamsApi.md#bulk_upsert_team_metadata)                                                 | **PATCH** /teams/{team_id}/metadata/bulk                                                | Bulk upsert team metadata                        |
| _TeamsApi_                   | [**create_team**](docs/TeamsApi.md#create_team)                                                                             | **POST** /teams                                                                         | Create a team                                    |
| _TeamsApi_                   | [**create_team_metadata**](docs/TeamsApi.md#create_team_metadata)                                                           | **POST** /teams/{team_id}/metadata                                                      | Create team metadata                             |
| _TeamsApi_                   | [**delete_team**](docs/TeamsApi.md#delete_team)                                                                             | **DELETE** /teams/{team_id}                                                             | Delete a team                                    |
| _TeamsApi_                   | [**delete_team_metadata**](docs/TeamsApi.md#delete_team_metadata)                                                           | **DELETE** /teams/{team_id}/metadata/{key}                                              | Delete team metadata                             |
| _TeamsApi_                   | [**get_team**](docs/TeamsApi.md#get_team)                                                                                   | **GET** /teams/{team_id}                                                                | Get a team                                       |
| _TeamsApi_                   | [**get_team_metadata**](docs/TeamsApi.md#get_team_metadata)                                                                 | **GET** /teams/{team_id}/metadata                                                       | Get team metadata                                |
| _TeamsApi_                   | [**list_teams**](docs/TeamsApi.md#list_teams)                                                                               | **GET** /teams                                                                          | List teams                                       |
| _TeamsApi_                   | [**patch_team**](docs/TeamsApi.md#patch_team)                                                                               | **PATCH** /teams/{team_id}                                                              | Patch a team                                     |
| _TeamsApi_                   | [**update_team**](docs/TeamsApi.md#update_team)                                                                             | **PUT** /teams/{team_id}                                                                | Update a team                                    |
| _TeamsApi_                   | [**update_team_metadata**](docs/TeamsApi.md#update_team_metadata)                                                           | **PUT** /teams/{team_id}/metadata/{key}                                                 | Update team metadata                             |
| _ThreatModelSubResourcesApi_ | [**bulk_create_diagram_metadata**](docs/ThreatModelSubResourcesApi.md#bulk_create_diagram_metadata)                         | **POST** /threat_models/{threat_model_id}/diagrams/{diagram_id}/metadata/bulk           | Bulk create diagram metadata                     |
| _ThreatModelSubResourcesApi_ | [**bulk_create_document_metadata**](docs/ThreatModelSubResourcesApi.md#bulk_create_document_metadata)                       | **POST** /threat_models/{threat_model_id}/documents/{document_id}/metadata/bulk         | Bulk create document metadata                    |
| _ThreatModelSubResourcesApi_ | [**bulk_create_note_metadata**](docs/ThreatModelSubResourcesApi.md#bulk_create_note_metadata)                               | **POST** /threat_models/{threat_model_id}/notes/{note_id}/metadata/bulk                 | Bulk create note metadata                        |
| _ThreatModelSubResourcesApi_ | [**bulk_create_repository_metadata**](docs/ThreatModelSubResourcesApi.md#bulk_create_repository_metadata)                   | **POST** /threat_models/{threat_model_id}/repositories/{repository_id}/metadata/bulk    | Bulk create source metadata                      |
| _ThreatModelSubResourcesApi_ | [**bulk_create_threat_metadata**](docs/ThreatModelSubResourcesApi.md#bulk_create_threat_metadata)                           | **POST** /threat_models/{threat_model_id}/threats/{threat_id}/metadata/bulk             | Bulk create threat metadata                      |
| _ThreatModelSubResourcesApi_ | [**bulk_create_threat_model_asset_metadata**](docs/ThreatModelSubResourcesApi.md#bulk_create_threat_model_asset_metadata)   | **POST** /threat_models/{threat_model_id}/assets/{asset_id}/metadata/bulk               | Bulk create asset metadata                       |
| _ThreatModelSubResourcesApi_ | [**bulk_create_threat_model_assets**](docs/ThreatModelSubResourcesApi.md#bulk_create_threat_model_assets)                   | **POST** /threat_models/{threat_model_id}/assets/bulk                                   | Bulk create assets                               |
| _ThreatModelSubResourcesApi_ | [**bulk_create_threat_model_documents**](docs/ThreatModelSubResourcesApi.md#bulk_create_threat_model_documents)             | **POST** /threat_models/{threat_model_id}/documents/bulk                                | Bulk create documents                            |
| _ThreatModelSubResourcesApi_ | [**bulk_create_threat_model_metadata**](docs/ThreatModelSubResourcesApi.md#bulk_create_threat_model_metadata)               | **POST** /threat_models/{threat_model_id}/metadata/bulk                                 | Bulk create threat model metadata                |
| _ThreatModelSubResourcesApi_ | [**bulk_create_threat_model_repositories**](docs/ThreatModelSubResourcesApi.md#bulk_create_threat_model_repositories)       | **POST** /threat_models/{threat_model_id}/repositories/bulk                             | Bulk create sources                              |
| _ThreatModelSubResourcesApi_ | [**bulk_create_threat_model_threats**](docs/ThreatModelSubResourcesApi.md#bulk_create_threat_model_threats)                 | **POST** /threat_models/{threat_model_id}/threats/bulk                                  | Bulk create threats                              |
| _ThreatModelSubResourcesApi_ | [**bulk_replace_diagram_metadata**](docs/ThreatModelSubResourcesApi.md#bulk_replace_diagram_metadata)                       | **PUT** /threat_models/{threat_model_id}/diagrams/{diagram_id}/metadata/bulk            | Bulk replace diagram metadata                    |
| _ThreatModelSubResourcesApi_ | [**bulk_replace_document_metadata**](docs/ThreatModelSubResourcesApi.md#bulk_replace_document_metadata)                     | **PUT** /threat_models/{threat_model_id}/documents/{document_id}/metadata/bulk          | Bulk replace document metadata                   |
| _ThreatModelSubResourcesApi_ | [**bulk_replace_note_metadata**](docs/ThreatModelSubResourcesApi.md#bulk_replace_note_metadata)                             | **PUT** /threat_models/{threat_model_id}/notes/{note_id}/metadata/bulk                  | Bulk replace note metadata                       |
| _ThreatModelSubResourcesApi_ | [**bulk_replace_repository_metadata**](docs/ThreatModelSubResourcesApi.md#bulk_replace_repository_metadata)                 | **PUT** /threat_models/{threat_model_id}/repositories/{repository_id}/metadata/bulk     | Bulk replace repository metadata                 |
| _ThreatModelSubResourcesApi_ | [**bulk_replace_threat_metadata**](docs/ThreatModelSubResourcesApi.md#bulk_replace_threat_metadata)                         | **PUT** /threat_models/{threat_model_id}/threats/{threat_id}/metadata/bulk              | Bulk replace threat metadata                     |
| _ThreatModelSubResourcesApi_ | [**bulk_replace_threat_model_asset_metadata**](docs/ThreatModelSubResourcesApi.md#bulk_replace_threat_model_asset_metadata) | **PUT** /threat_models/{threat_model_id}/assets/{asset_id}/metadata/bulk                | Bulk replace asset metadata                      |
| _ThreatModelSubResourcesApi_ | [**bulk_replace_threat_model_metadata**](docs/ThreatModelSubResourcesApi.md#bulk_replace_threat_model_metadata)             | **PUT** /threat_models/{threat_model_id}/metadata/bulk                                  | Bulk replace threat model metadata               |
| _ThreatModelSubResourcesApi_ | [**bulk_update_threat_model_threats**](docs/ThreatModelSubResourcesApi.md#bulk_update_threat_model_threats)                 | **PUT** /threat_models/{threat_model_id}/threats/bulk                                   | Bulk update threats                              |
| _ThreatModelSubResourcesApi_ | [**bulk_upsert_diagram_metadata**](docs/ThreatModelSubResourcesApi.md#bulk_upsert_diagram_metadata)                         | **PATCH** /threat_models/{threat_model_id}/diagrams/{diagram_id}/metadata/bulk          | Bulk upsert diagram metadata                     |
| _ThreatModelSubResourcesApi_ | [**bulk_upsert_document_metadata**](docs/ThreatModelSubResourcesApi.md#bulk_upsert_document_metadata)                       | **PATCH** /threat_models/{threat_model_id}/documents/{document_id}/metadata/bulk        | Bulk upsert document metadata                    |
| _ThreatModelSubResourcesApi_ | [**bulk_upsert_note_metadata**](docs/ThreatModelSubResourcesApi.md#bulk_upsert_note_metadata)                               | **PATCH** /threat_models/{threat_model_id}/notes/{note_id}/metadata/bulk                | Bulk upsert note metadata                        |
| _ThreatModelSubResourcesApi_ | [**bulk_upsert_repository_metadata**](docs/ThreatModelSubResourcesApi.md#bulk_upsert_repository_metadata)                   | **PATCH** /threat_models/{threat_model_id}/repositories/{repository_id}/metadata/bulk   | Bulk upsert repository metadata                  |
| _ThreatModelSubResourcesApi_ | [**bulk_upsert_threat_metadata**](docs/ThreatModelSubResourcesApi.md#bulk_upsert_threat_metadata)                           | **PATCH** /threat_models/{threat_model_id}/threats/{threat_id}/metadata/bulk            | Bulk upsert threat metadata                      |
| _ThreatModelSubResourcesApi_ | [**bulk_upsert_threat_model_asset_metadata**](docs/ThreatModelSubResourcesApi.md#bulk_upsert_threat_model_asset_metadata)   | **PATCH** /threat_models/{threat_model_id}/assets/{asset_id}/metadata/bulk              | Bulk upsert asset metadata                       |
| _ThreatModelSubResourcesApi_ | [**bulk_upsert_threat_model_assets**](docs/ThreatModelSubResourcesApi.md#bulk_upsert_threat_model_assets)                   | **PUT** /threat_models/{threat_model_id}/assets/bulk                                    | Bulk upsert assets                               |
| _ThreatModelSubResourcesApi_ | [**bulk_upsert_threat_model_documents**](docs/ThreatModelSubResourcesApi.md#bulk_upsert_threat_model_documents)             | **PUT** /threat_models/{threat_model_id}/documents/bulk                                 | Bulk upsert documents                            |
| _ThreatModelSubResourcesApi_ | [**bulk_upsert_threat_model_metadata**](docs/ThreatModelSubResourcesApi.md#bulk_upsert_threat_model_metadata)               | **PATCH** /threat_models/{threat_model_id}/metadata/bulk                                | Bulk upsert threat model metadata                |
| _ThreatModelSubResourcesApi_ | [**bulk_upsert_threat_model_repositories**](docs/ThreatModelSubResourcesApi.md#bulk_upsert_threat_model_repositories)       | **PUT** /threat_models/{threat_model_id}/repositories/bulk                              | Bulk upsert repositories                         |
| _ThreatModelSubResourcesApi_ | [**create_diagram_metadata**](docs/ThreatModelSubResourcesApi.md#create_diagram_metadata)                                   | **POST** /threat_models/{threat_model_id}/diagrams/{diagram_id}/metadata                | Create diagram metadata                          |
| _ThreatModelSubResourcesApi_ | [**create_document_metadata**](docs/ThreatModelSubResourcesApi.md#create_document_metadata)                                 | **POST** /threat_models/{threat_model_id}/documents/{document_id}/metadata              | Create document metadata                         |
| _ThreatModelSubResourcesApi_ | [**create_note_metadata**](docs/ThreatModelSubResourcesApi.md#create_note_metadata)                                         | **POST** /threat_models/{threat_model_id}/notes/{note_id}/metadata                      | Create note metadata                             |
| _ThreatModelSubResourcesApi_ | [**create_repository_metadata**](docs/ThreatModelSubResourcesApi.md#create_repository_metadata)                             | **POST** /threat_models/{threat_model_id}/repositories/{repository_id}/metadata         | Create source metadata                           |
| _ThreatModelSubResourcesApi_ | [**create_threat_metadata**](docs/ThreatModelSubResourcesApi.md#create_threat_metadata)                                     | **POST** /threat_models/{threat_model_id}/threats/{threat_id}/metadata                  | Create threat metadata                           |
| _ThreatModelSubResourcesApi_ | [**create_threat_model_asset**](docs/ThreatModelSubResourcesApi.md#create_threat_model_asset)                               | **POST** /threat_models/{threat_model_id}/assets                                        | Create a new asset                               |
| _ThreatModelSubResourcesApi_ | [**create_threat_model_asset_metadata**](docs/ThreatModelSubResourcesApi.md#create_threat_model_asset_metadata)             | **POST** /threat_models/{threat_model_id}/assets/{asset_id}/metadata                    | Add metadata to an asset                         |
| _ThreatModelSubResourcesApi_ | [**create_threat_model_diagram**](docs/ThreatModelSubResourcesApi.md#create_threat_model_diagram)                           | **POST** /threat_models/{threat_model_id}/diagrams                                      | Create a new diagram                             |
| _ThreatModelSubResourcesApi_ | [**create_threat_model_document**](docs/ThreatModelSubResourcesApi.md#create_threat_model_document)                         | **POST** /threat_models/{threat_model_id}/documents                                     | Create a new document                            |
| _ThreatModelSubResourcesApi_ | [**create_threat_model_metadata**](docs/ThreatModelSubResourcesApi.md#create_threat_model_metadata)                         | **POST** /threat_models/{threat_model_id}/metadata                                      | Create threat model metadata                     |
| _ThreatModelSubResourcesApi_ | [**create_threat_model_note**](docs/ThreatModelSubResourcesApi.md#create_threat_model_note)                                 | **POST** /threat_models/{threat_model_id}/notes                                         | Create a new note                                |
| _ThreatModelSubResourcesApi_ | [**create_threat_model_repository**](docs/ThreatModelSubResourcesApi.md#create_threat_model_repository)                     | **POST** /threat_models/{threat_model_id}/repositories                                  | Create a new source reference                    |
| _ThreatModelSubResourcesApi_ | [**create_threat_model_threat**](docs/ThreatModelSubResourcesApi.md#create_threat_model_threat)                             | **POST** /threat_models/{threat_model_id}/threats                                       | Create a new threat                              |
| _ThreatModelSubResourcesApi_ | [**delete_diagram_metadata_by_key**](docs/ThreatModelSubResourcesApi.md#delete_diagram_metadata_by_key)                     | **DELETE** /threat_models/{threat_model_id}/diagrams/{diagram_id}/metadata/{key}        | Delete diagram metadata by key                   |
| _ThreatModelSubResourcesApi_ | [**delete_document_metadata_by_key**](docs/ThreatModelSubResourcesApi.md#delete_document_metadata_by_key)                   | **DELETE** /threat_models/{threat_model_id}/documents/{document_id}/metadata/{key}      | Delete document metadata by key                  |
| _ThreatModelSubResourcesApi_ | [**delete_note_metadata_by_key**](docs/ThreatModelSubResourcesApi.md#delete_note_metadata_by_key)                           | **DELETE** /threat_models/{threat_model_id}/notes/{note_id}/metadata/{key}              | Delete note metadata by key                      |
| _ThreatModelSubResourcesApi_ | [**delete_repository_metadata_by_key**](docs/ThreatModelSubResourcesApi.md#delete_repository_metadata_by_key)               | **DELETE** /threat_models/{threat_model_id}/repositories/{repository_id}/metadata/{key} | Delete source metadata by key                    |
| _ThreatModelSubResourcesApi_ | [**delete_threat_metadata_by_key**](docs/ThreatModelSubResourcesApi.md#delete_threat_metadata_by_key)                       | **DELETE** /threat_models/{threat_model_id}/threats/{threat_id}/metadata/{key}          | Delete threat metadata by key                    |
| _ThreatModelSubResourcesApi_ | [**delete_threat_model_asset**](docs/ThreatModelSubResourcesApi.md#delete_threat_model_asset)                               | **DELETE** /threat_models/{threat_model_id}/assets/{asset_id}                           | Delete an asset                                  |
| _ThreatModelSubResourcesApi_ | [**delete_threat_model_asset_metadata**](docs/ThreatModelSubResourcesApi.md#delete_threat_model_asset_metadata)             | **DELETE** /threat_models/{threat_model_id}/assets/{asset_id}/metadata/{key}            | Delete asset metadata                            |
| _ThreatModelSubResourcesApi_ | [**delete_threat_model_diagram**](docs/ThreatModelSubResourcesApi.md#delete_threat_model_diagram)                           | **DELETE** /threat_models/{threat_model_id}/diagrams/{diagram_id}                       | Delete a diagram                                 |
| _ThreatModelSubResourcesApi_ | [**delete_threat_model_document**](docs/ThreatModelSubResourcesApi.md#delete_threat_model_document)                         | **DELETE** /threat_models/{threat_model_id}/documents/{document_id}                     | Delete a document                                |
| _ThreatModelSubResourcesApi_ | [**delete_threat_model_metadata_by_key**](docs/ThreatModelSubResourcesApi.md#delete_threat_model_metadata_by_key)           | **DELETE** /threat_models/{threat_model_id}/metadata/{key}                              | Delete threat model metadata by key              |
| _ThreatModelSubResourcesApi_ | [**delete_threat_model_note**](docs/ThreatModelSubResourcesApi.md#delete_threat_model_note)                                 | **DELETE** /threat_models/{threat_model_id}/notes/{note_id}                             | Delete a note                                    |
| _ThreatModelSubResourcesApi_ | [**delete_threat_model_repository**](docs/ThreatModelSubResourcesApi.md#delete_threat_model_repository)                     | **DELETE** /threat_models/{threat_model_id}/repositories/{repository_id}                | Delete a source reference                        |
| _ThreatModelSubResourcesApi_ | [**delete_threat_model_threat**](docs/ThreatModelSubResourcesApi.md#delete_threat_model_threat)                             | **DELETE** /threat_models/{threat_model_id}/threats/{threat_id}                         | Delete a threat                                  |
| _ThreatModelSubResourcesApi_ | [**get_diagram_metadata**](docs/ThreatModelSubResourcesApi.md#get_diagram_metadata)                                         | **GET** /threat_models/{threat_model_id}/diagrams/{diagram_id}/metadata                 | Get diagram metadata                             |
| _ThreatModelSubResourcesApi_ | [**get_diagram_metadata_by_key**](docs/ThreatModelSubResourcesApi.md#get_diagram_metadata_by_key)                           | **GET** /threat_models/{threat_model_id}/diagrams/{diagram_id}/metadata/{key}           | Get diagram metadata by key                      |
| _ThreatModelSubResourcesApi_ | [**get_diagram_model**](docs/ThreatModelSubResourcesApi.md#get_diagram_model)                                               | **GET** /threat_models/{threat_model_id}/diagrams/{diagram_id}/model                    | Get minimal diagram model for automated analysis |
| _ThreatModelSubResourcesApi_ | [**get_document_metadata**](docs/ThreatModelSubResourcesApi.md#get_document_metadata)                                       | **GET** /threat_models/{threat_model_id}/documents/{document_id}/metadata               | Get document metadata                            |
| _ThreatModelSubResourcesApi_ | [**get_document_metadata_by_key**](docs/ThreatModelSubResourcesApi.md#get_document_metadata_by_key)                         | **GET** /threat_models/{threat_model_id}/documents/{document_id}/metadata/{key}         | Get document metadata by key                     |
| _ThreatModelSubResourcesApi_ | [**get_note_metadata**](docs/ThreatModelSubResourcesApi.md#get_note_metadata)                                               | **GET** /threat_models/{threat_model_id}/notes/{note_id}/metadata                       | Get note metadata                                |
| _ThreatModelSubResourcesApi_ | [**get_note_metadata_by_key**](docs/ThreatModelSubResourcesApi.md#get_note_metadata_by_key)                                 | **GET** /threat_models/{threat_model_id}/notes/{note_id}/metadata/{key}                 | Get note metadata by key                         |
| _ThreatModelSubResourcesApi_ | [**get_repository_metadata**](docs/ThreatModelSubResourcesApi.md#get_repository_metadata)                                   | **GET** /threat_models/{threat_model_id}/repositories/{repository_id}/metadata          | Get source metadata                              |
| _ThreatModelSubResourcesApi_ | [**get_repository_metadata_by_key**](docs/ThreatModelSubResourcesApi.md#get_repository_metadata_by_key)                     | **GET** /threat_models/{threat_model_id}/repositories/{repository_id}/metadata/{key}    | Get source metadata by key                       |
| _ThreatModelSubResourcesApi_ | [**get_threat_metadata**](docs/ThreatModelSubResourcesApi.md#get_threat_metadata)                                           | **GET** /threat_models/{threat_model_id}/threats/{threat_id}/metadata                   | Get threat metadata                              |
| _ThreatModelSubResourcesApi_ | [**get_threat_metadata_by_key**](docs/ThreatModelSubResourcesApi.md#get_threat_metadata_by_key)                             | **GET** /threat_models/{threat_model_id}/threats/{threat_id}/metadata/{key}             | Get threat metadata by key                       |
| _ThreatModelSubResourcesApi_ | [**get_threat_model_asset**](docs/ThreatModelSubResourcesApi.md#get_threat_model_asset)                                     | **GET** /threat_models/{threat_model_id}/assets/{asset_id}                              | Get a specific asset                             |
| _ThreatModelSubResourcesApi_ | [**get_threat_model_asset_metadata**](docs/ThreatModelSubResourcesApi.md#get_threat_model_asset_metadata)                   | **GET** /threat_models/{threat_model_id}/assets/{asset_id}/metadata                     | Get all metadata for an asset                    |
| _ThreatModelSubResourcesApi_ | [**get_threat_model_asset_metadata_by_key**](docs/ThreatModelSubResourcesApi.md#get_threat_model_asset_metadata_by_key)     | **GET** /threat_models/{threat_model_id}/assets/{asset_id}/metadata/{key}               | Get specific metadata for an asset               |
| _ThreatModelSubResourcesApi_ | [**get_threat_model_assets**](docs/ThreatModelSubResourcesApi.md#get_threat_model_assets)                                   | **GET** /threat_models/{threat_model_id}/assets                                         | List assets in a threat model                    |
| _ThreatModelSubResourcesApi_ | [**get_threat_model_diagram**](docs/ThreatModelSubResourcesApi.md#get_threat_model_diagram)                                 | **GET** /threat_models/{threat_model_id}/diagrams/{diagram_id}                          | Get a specific diagram                           |
| _ThreatModelSubResourcesApi_ | [**get_threat_model_diagrams**](docs/ThreatModelSubResourcesApi.md#get_threat_model_diagrams)                               | **GET** /threat_models/{threat_model_id}/diagrams                                       | List threat model diagrams                       |
| _ThreatModelSubResourcesApi_ | [**get_threat_model_document**](docs/ThreatModelSubResourcesApi.md#get_threat_model_document)                               | **GET** /threat_models/{threat_model_id}/documents/{document_id}                        | Get a specific document                          |
| _ThreatModelSubResourcesApi_ | [**get_threat_model_documents**](docs/ThreatModelSubResourcesApi.md#get_threat_model_documents)                             | **GET** /threat_models/{threat_model_id}/documents                                      | List documents in a threat model                 |
| _ThreatModelSubResourcesApi_ | [**get_threat_model_metadata**](docs/ThreatModelSubResourcesApi.md#get_threat_model_metadata)                               | **GET** /threat_models/{threat_model_id}/metadata                                       | Get threat model metadata                        |
| _ThreatModelSubResourcesApi_ | [**get_threat_model_metadata_by_key**](docs/ThreatModelSubResourcesApi.md#get_threat_model_metadata_by_key)                 | **GET** /threat_models/{threat_model_id}/metadata/{key}                                 | Get threat model metadata by key                 |
| _ThreatModelSubResourcesApi_ | [**get_threat_model_note**](docs/ThreatModelSubResourcesApi.md#get_threat_model_note)                                       | **GET** /threat_models/{threat_model_id}/notes/{note_id}                                | Get a specific note                              |
| _ThreatModelSubResourcesApi_ | [**get_threat_model_notes**](docs/ThreatModelSubResourcesApi.md#get_threat_model_notes)                                     | **GET** /threat_models/{threat_model_id}/notes                                          | List notes in a threat model                     |
| _ThreatModelSubResourcesApi_ | [**get_threat_model_repositories**](docs/ThreatModelSubResourcesApi.md#get_threat_model_repositories)                       | **GET** /threat_models/{threat_model_id}/repositories                                   | List sources in a threat model                   |
| _ThreatModelSubResourcesApi_ | [**get_threat_model_repository**](docs/ThreatModelSubResourcesApi.md#get_threat_model_repository)                           | **GET** /threat_models/{threat_model_id}/repositories/{repository_id}                   | Get a specific source reference                  |
| _ThreatModelSubResourcesApi_ | [**get_threat_model_threat**](docs/ThreatModelSubResourcesApi.md#get_threat_model_threat)                                   | **GET** /threat_models/{threat_model_id}/threats/{threat_id}                            | Get a specific threat                            |
| _ThreatModelSubResourcesApi_ | [**get_threat_model_threats**](docs/ThreatModelSubResourcesApi.md#get_threat_model_threats)                                 | **GET** /threat_models/{threat_model_id}/threats                                        | List threats in a threat model                   |
| _ThreatModelSubResourcesApi_ | [**patch_threat_model_diagram**](docs/ThreatModelSubResourcesApi.md#patch_threat_model_diagram)                             | **PATCH** /threat_models/{threat_model_id}/diagrams/{diagram_id}                        | Partially update a diagram                       |
| _ThreatModelSubResourcesApi_ | [**patch_threat_model_threat**](docs/ThreatModelSubResourcesApi.md#patch_threat_model_threat)                               | **PATCH** /threat_models/{threat_model_id}/threats/{threat_id}                          | Partially update a threat                        |
| _ThreatModelSubResourcesApi_ | [**update_diagram_metadata_by_key**](docs/ThreatModelSubResourcesApi.md#update_diagram_metadata_by_key)                     | **PUT** /threat_models/{threat_model_id}/diagrams/{diagram_id}/metadata/{key}           | Update diagram metadata by key                   |
| _ThreatModelSubResourcesApi_ | [**update_document_metadata_by_key**](docs/ThreatModelSubResourcesApi.md#update_document_metadata_by_key)                   | **PUT** /threat_models/{threat_model_id}/documents/{document_id}/metadata/{key}         | Update document metadata by key                  |
| _ThreatModelSubResourcesApi_ | [**update_note_metadata_by_key**](docs/ThreatModelSubResourcesApi.md#update_note_metadata_by_key)                           | **PUT** /threat_models/{threat_model_id}/notes/{note_id}/metadata/{key}                 | Update note metadata by key                      |
| _ThreatModelSubResourcesApi_ | [**update_repository_metadata_by_key**](docs/ThreatModelSubResourcesApi.md#update_repository_metadata_by_key)               | **PUT** /threat_models/{threat_model_id}/repositories/{repository_id}/metadata/{key}    | Update source metadata by key                    |
| _ThreatModelSubResourcesApi_ | [**update_threat_metadata_by_key**](docs/ThreatModelSubResourcesApi.md#update_threat_metadata_by_key)                       | **PUT** /threat_models/{threat_model_id}/threats/{threat_id}/metadata/{key}             | Update threat metadata by key                    |
| _ThreatModelSubResourcesApi_ | [**update_threat_model_asset**](docs/ThreatModelSubResourcesApi.md#update_threat_model_asset)                               | **PUT** /threat_models/{threat_model_id}/assets/{asset_id}                              | Update an asset                                  |
| _ThreatModelSubResourcesApi_ | [**update_threat_model_asset_metadata**](docs/ThreatModelSubResourcesApi.md#update_threat_model_asset_metadata)             | **PUT** /threat_models/{threat_model_id}/assets/{asset_id}/metadata/{key}               | Update asset metadata                            |
| _ThreatModelSubResourcesApi_ | [**update_threat_model_diagram**](docs/ThreatModelSubResourcesApi.md#update_threat_model_diagram)                           | **PUT** /threat_models/{threat_model_id}/diagrams/{diagram_id}                          | Update a diagram                                 |
| _ThreatModelSubResourcesApi_ | [**update_threat_model_document**](docs/ThreatModelSubResourcesApi.md#update_threat_model_document)                         | **PUT** /threat_models/{threat_model_id}/documents/{document_id}                        | Update a document                                |
| _ThreatModelSubResourcesApi_ | [**update_threat_model_metadata_by_key**](docs/ThreatModelSubResourcesApi.md#update_threat_model_metadata_by_key)           | **PUT** /threat_models/{threat_model_id}/metadata/{key}                                 | Update threat model metadata by key              |
| _ThreatModelSubResourcesApi_ | [**update_threat_model_note**](docs/ThreatModelSubResourcesApi.md#update_threat_model_note)                                 | **PUT** /threat_models/{threat_model_id}/notes/{note_id}                                | Update a note                                    |
| _ThreatModelSubResourcesApi_ | [**update_threat_model_repository**](docs/ThreatModelSubResourcesApi.md#update_threat_model_repository)                     | **PUT** /threat_models/{threat_model_id}/repositories/{repository_id}                   | Update a source reference                        |
| _ThreatModelSubResourcesApi_ | [**update_threat_model_threat**](docs/ThreatModelSubResourcesApi.md#update_threat_model_threat)                             | **PUT** /threat_models/{threat_model_id}/threats/{threat_id}                            | Update a threat                                  |
| _ThreatModelsApi_            | [**create_threat_model**](docs/ThreatModelsApi.md#create_threat_model)                                                      | **POST** /threat_models                                                                 | Create a threat model                            |
| _ThreatModelsApi_            | [**delete_threat_model**](docs/ThreatModelsApi.md#delete_threat_model)                                                      | **DELETE** /threat_models/{threat_model_id}                                             | Delete a threat model                            |
| _ThreatModelsApi_            | [**get_threat_model**](docs/ThreatModelsApi.md#get_threat_model)                                                            | **GET** /threat_models/{threat_model_id}                                                | Retrieve a threat model                          |
| _ThreatModelsApi_            | [**list_threat_models**](docs/ThreatModelsApi.md#list_threat_models)                                                        | **GET** /threat_models                                                                  | List threat models                               |
| _ThreatModelsApi_            | [**patch_threat_model**](docs/ThreatModelsApi.md#patch_threat_model)                                                        | **PATCH** /threat_models/{threat_model_id}                                              | Partially update a threat model                  |
| _ThreatModelsApi_            | [**update_threat_model**](docs/ThreatModelsApi.md#update_threat_model)                                                      | **PUT** /threat_models/{threat_model_id}                                                | Update a threat model                            |
| _ThreatsApi_                 | [**bulk_delete_threat_model_threats**](docs/ThreatsApi.md#bulk_delete_threat_model_threats)                                 | **DELETE** /threat_models/{threat_model_id}/threats/bulk                                | Bulk DELETE threats                              |
| _ThreatsApi_                 | [**bulk_patch_threat_model_threats**](docs/ThreatsApi.md#bulk_patch_threat_model_threats)                                   | **PATCH** /threat_models/{threat_model_id}/threats/bulk                                 | Bulk PATCH threats                               |
| _UserAccountApi_             | [**create_current_user_preferences**](docs/UserAccountApi.md#create_current_user_preferences)                               | **POST** /me/preferences                                                                | Create user preferences                          |
| _UserAccountApi_             | [**get_current_user_preferences**](docs/UserAccountApi.md#get_current_user_preferences)                                     | **GET** /me/preferences                                                                 | Get user preferences                             |
| _UserAccountApi_             | [**update_current_user_preferences**](docs/UserAccountApi.md#update_current_user_preferences)                               | **PUT** /me/preferences                                                                 | Update user preferences                          |
| _UsersApi_                   | [**delete_user_account**](docs/UsersApi.md#delete_user_account)                                                             | **DELETE** /me                                                                          | Delete authenticated user account and all data   |
| _UsersApi_                   | [**logout_current_user**](docs/UsersApi.md#logout_current_user)                                                             | **POST** /me/logout                                                                     | Logout current user                              |
| _UsersApi_                   | [**transfer_current_user_ownership**](docs/UsersApi.md#transfer_current_user_ownership)                                     | **POST** /me/transfer                                                                   | Transfer ownership of all owned resources        |
| _WebhooksApi_                | [**create_webhook_subscription**](docs/WebhooksApi.md#create_webhook_subscription)                                          | **POST** /webhooks/subscriptions                                                        | Create webhook subscription                      |
| _WebhooksApi_                | [**delete_webhook_subscription**](docs/WebhooksApi.md#delete_webhook_subscription)                                          | **DELETE** /webhooks/subscriptions/{webhook_id}                                         | Delete webhook subscription                      |
| _WebhooksApi_                | [**get_webhook_delivery**](docs/WebhooksApi.md#get_webhook_delivery)                                                        | **GET** /webhooks/deliveries/{delivery_id}                                              | Get webhook delivery                             |
| _WebhooksApi_                | [**get_webhook_subscription**](docs/WebhooksApi.md#get_webhook_subscription)                                                | **GET** /webhooks/subscriptions/{webhook_id}                                            | Get webhook subscription                         |
| _WebhooksApi_                | [**list_webhook_deliveries**](docs/WebhooksApi.md#list_webhook_deliveries)                                                  | **GET** /webhooks/deliveries                                                            | List webhook deliveries                          |
| _WebhooksApi_                | [**list_webhook_subscriptions**](docs/WebhooksApi.md#list_webhook_subscriptions)                                            | **GET** /webhooks/subscriptions                                                         | List webhook subscriptions                       |
| _WebhooksApi_                | [**test_webhook_subscription**](docs/WebhooksApi.md#test_webhook_subscription)                                              | **POST** /webhooks/subscriptions/{webhook_id}/test                                      | Test webhook subscription                        |

## Documentation For Models

- [AddGroupMemberRequest](docs/AddGroupMemberRequest.md)
- [AddonInvocationQuota](docs/AddonInvocationQuota.md)
- [AddonQuotaUpdate](docs/AddonQuotaUpdate.md)
- [AddonResponse](docs/AddonResponse.md)
- [AdminGroup](docs/AdminGroup.md)
- [AdminGroupListResponse](docs/AdminGroupListResponse.md)
- [AdminUser](docs/AdminUser.md)
- [AdminUserListResponse](docs/AdminUserListResponse.md)
- [ApiInfo](docs/ApiInfo.md)
- [ApiInfoApi](docs/ApiInfoApi.md)
- [ApiInfoHealth](docs/ApiInfoHealth.md)
- [ApiInfoOperator](docs/ApiInfoOperator.md)
- [ApiInfoService](docs/ApiInfoService.md)
- [ApiInfoStatus](docs/ApiInfoStatus.md)
- [Asset](docs/Asset.md)
- [AssetBase](docs/AssetBase.md)
- [AssetInput](docs/AssetInput.md)
- [AuthTokenResponse](docs/AuthTokenResponse.md)
- [Authorization](docs/Authorization.md)
- [BaseDiagram](docs/BaseDiagram.md)
- [BaseDiagramImage](docs/BaseDiagramImage.md)
- [BaseDiagramInput](docs/BaseDiagramInput.md)
- [BulkDeleteThreatModelThreats200Response](docs/BulkDeleteThreatModelThreats200Response.md)
- [BulkPatchRequest](docs/BulkPatchRequest.md)
- [BulkPatchRequestPatchesInner](docs/BulkPatchRequestPatchesInner.md)
- [CVSSScore](docs/CVSSScore.md)
- [Cell](docs/Cell.md)
- [CellData](docs/CellData.md)
- [ClientConfig](docs/ClientConfig.md)
- [ClientConfigFeatures](docs/ClientConfigFeatures.md)
- [ClientConfigLimits](docs/ClientConfigLimits.md)
- [ClientConfigOperator](docs/ClientConfigOperator.md)
- [ClientConfigUi](docs/ClientConfigUi.md)
- [ClientCredentialInfo](docs/ClientCredentialInfo.md)
- [ClientCredentialResponse](docs/ClientCredentialResponse.md)
- [CollaborationSession](docs/CollaborationSession.md)
- [ComponentHealth](docs/ComponentHealth.md)
- [CreateAddonRequest](docs/CreateAddonRequest.md)
- [CreateAdminGroupRequest](docs/CreateAdminGroupRequest.md)
- [CreateCurrentUserClientCredentialRequest](docs/CreateCurrentUserClientCredentialRequest.md)
- [CreateDiagramCollaborationSession409Response](docs/CreateDiagramCollaborationSession409Response.md)
- [CreateDiagramRequest](docs/CreateDiagramRequest.md)
- [CreateThreatModelFromSurveyResponse](docs/CreateThreatModelFromSurveyResponse.md)
- [DeletionChallenge](docs/DeletionChallenge.md)
- [DfdDiagram](docs/DfdDiagram.md)
- [DfdDiagramAllOfCells](docs/DfdDiagramAllOfCells.md)
- [DfdDiagramInput](docs/DfdDiagramInput.md)
- [DfdDiagramInputAllOfCells](docs/DfdDiagramInputAllOfCells.md)
- [DiagramListItem](docs/DiagramListItem.md)
- [DiagramListItemImage](docs/DiagramListItemImage.md)
- [Document](docs/Document.md)
- [DocumentBase](docs/DocumentBase.md)
- [DocumentInput](docs/DocumentInput.md)
- [Edge](docs/Edge.md)
- [EdgeAttrs](docs/EdgeAttrs.md)
- [EdgeAttrsLine](docs/EdgeAttrsLine.md)
- [EdgeAttrsLineSourceMarker](docs/EdgeAttrsLineSourceMarker.md)
- [EdgeAttrsLineTargetMarker](docs/EdgeAttrsLineTargetMarker.md)
- [EdgeConnector](docs/EdgeConnector.md)
- [EdgeConnectorOneOf](docs/EdgeConnectorOneOf.md)
- [EdgeConnectorOneOfArgs](docs/EdgeConnectorOneOfArgs.md)
- [EdgeLabel](docs/EdgeLabel.md)
- [EdgeLabelAttrs](docs/EdgeLabelAttrs.md)
- [EdgeLabelAttrsText](docs/EdgeLabelAttrsText.md)
- [EdgeLabelPosition](docs/EdgeLabelPosition.md)
- [EdgeLabelPositionOneOf](docs/EdgeLabelPositionOneOf.md)
- [EdgeLabelPositionOneOfOffset](docs/EdgeLabelPositionOneOfOffset.md)
- [EdgeLabelPositionOneOfOffsetOneOf](docs/EdgeLabelPositionOneOfOffsetOneOf.md)
- [EdgeLabelPositionOneOfOptions](docs/EdgeLabelPositionOneOfOptions.md)
- [EdgeRouter](docs/EdgeRouter.md)
- [EdgeRouterOneOf](docs/EdgeRouterOneOf.md)
- [EdgeRouterOneOfArgs](docs/EdgeRouterOneOfArgs.md)
- [EdgeTerminal](docs/EdgeTerminal.md)
- [Error](docs/Error.md)
- [ErrorDetails](docs/ErrorDetails.md)
- [ExchangeOAuthCodeRequest](docs/ExchangeOAuthCodeRequest.md)
- [ExtendedAsset](docs/ExtendedAsset.md)
- [GetAuthProviders200Response](docs/GetAuthProviders200Response.md)
- [GetAuthProviders200ResponseProvidersInner](docs/GetAuthProviders200ResponseProvidersInner.md)
- [GetCurrentUser200Response](docs/GetCurrentUser200Response.md)
- [GetJWKS200Response](docs/GetJWKS200Response.md)
- [GetJWKS200ResponseKeysInner](docs/GetJWKS200ResponseKeysInner.md)
- [GetOAuthAuthorizationServerMetadata200Response](docs/GetOAuthAuthorizationServerMetadata200Response.md)
- [GetOpenIDConfiguration200Response](docs/GetOpenIDConfiguration200Response.md)
- [GetProviderGroups200Response](docs/GetProviderGroups200Response.md)
- [GetProviderGroups200ResponseGroupsInner](docs/GetProviderGroups200ResponseGroupsInner.md)
- [GetSAMLProviders200Response](docs/GetSAMLProviders200Response.md)
- [GetUserAPIQuota429Response](docs/GetUserAPIQuota429Response.md)
- [GroupMember](docs/GroupMember.md)
- [GroupMemberListResponse](docs/GroupMemberListResponse.md)
- [IntrospectToken200Response](docs/IntrospectToken200Response.md)
- [IntrospectToken500Response](docs/IntrospectToken500Response.md)
- [InvocationResponse](docs/InvocationResponse.md)
- [InvokeAddonRequest](docs/InvokeAddonRequest.md)
- [InvokeAddonResponse](docs/InvokeAddonResponse.md)
- [JsonPatchDocumentInner](docs/JsonPatchDocumentInner.md)
- [ListAddonQuotasResponse](docs/ListAddonQuotasResponse.md)
- [ListAddonsResponse](docs/ListAddonsResponse.md)
- [ListAssetsResponse](docs/ListAssetsResponse.md)
- [ListClientCredentialsResponse](docs/ListClientCredentialsResponse.md)
- [ListDiagramsResponse](docs/ListDiagramsResponse.md)
- [ListDocumentsResponse](docs/ListDocumentsResponse.md)
- [ListInvocationsResponse](docs/ListInvocationsResponse.md)
- [ListNotesResponse](docs/ListNotesResponse.md)
- [ListProjectsResponse](docs/ListProjectsResponse.md)
- [ListRepositoriesResponse](docs/ListRepositoriesResponse.md)
- [ListSurveyResponsesResponse](docs/ListSurveyResponsesResponse.md)
- [ListSurveysResponse](docs/ListSurveysResponse.md)
- [ListTeamsResponse](docs/ListTeamsResponse.md)
- [ListThreatModelsResponse](docs/ListThreatModelsResponse.md)
- [ListThreatsResponse](docs/ListThreatsResponse.md)
- [ListTriageNotesResponse](docs/ListTriageNotesResponse.md)
- [ListUserQuotasResponse](docs/ListUserQuotasResponse.md)
- [ListWebhookDeliveriesResponse](docs/ListWebhookDeliveriesResponse.md)
- [ListWebhookQuotasResponse](docs/ListWebhookQuotasResponse.md)
- [ListWebhookSubscriptionsResponse](docs/ListWebhookSubscriptionsResponse.md)
- [Metadata](docs/Metadata.md)
- [MigrateSystemSettings200Response](docs/MigrateSystemSettings200Response.md)
- [MinimalCell](docs/MinimalCell.md)
- [MinimalDiagramModel](docs/MinimalDiagramModel.md)
- [MinimalEdge](docs/MinimalEdge.md)
- [MinimalNode](docs/MinimalNode.md)
- [MyGroupListResponse](docs/MyGroupListResponse.md)
- [Node](docs/Node.md)
- [NodeAllOfPosition](docs/NodeAllOfPosition.md)
- [NodeAllOfSize](docs/NodeAllOfSize.md)
- [NodeAttrs](docs/NodeAttrs.md)
- [NodeAttrsBody](docs/NodeAttrsBody.md)
- [NodeAttrsText](docs/NodeAttrsText.md)
- [Note](docs/Note.md)
- [NoteBase](docs/NoteBase.md)
- [NoteInput](docs/NoteInput.md)
- [NoteListItem](docs/NoteListItem.md)
- [OAuthProtectedResourceMetadata](docs/OAuthProtectedResourceMetadata.md)
- [Participant](docs/Participant.md)
- [Point](docs/Point.md)
- [PortConfiguration](docs/PortConfiguration.md)
- [PortConfigurationGroupsValue](docs/PortConfigurationGroupsValue.md)
- [PortConfigurationItemsInner](docs/PortConfigurationItemsInner.md)
- [Principal](docs/Principal.md)
- [ProcessSAMLLogout200Response](docs/ProcessSAMLLogout200Response.md)
- [Project](docs/Project.md)
- [ProjectBase](docs/ProjectBase.md)
- [ProjectListItem](docs/ProjectListItem.md)
- [ReencryptSystemSettings200Response](docs/ReencryptSystemSettings200Response.md)
- [ReencryptSystemSettings200ResponseErrorsInner](docs/ReencryptSystemSettings200ResponseErrorsInner.md)
- [RelatedProject](docs/RelatedProject.md)
- [RelatedTeam](docs/RelatedTeam.md)
- [RelationshipType](docs/RelationshipType.md)
- [Repository](docs/Repository.md)
- [RepositoryBase](docs/RepositoryBase.md)
- [RepositoryBaseParameters](docs/RepositoryBaseParameters.md)
- [RepositoryInput](docs/RepositoryInput.md)
- [ResponsibleParty](docs/ResponsibleParty.md)
- [SAMLProviderInfo](docs/SAMLProviderInfo.md)
- [Survey](docs/Survey.md)
- [SurveyBase](docs/SurveyBase.md)
- [SurveyInput](docs/SurveyInput.md)
- [SurveyListItem](docs/SurveyListItem.md)
- [SurveyResponse](docs/SurveyResponse.md)
- [SurveyResponseBase](docs/SurveyResponseBase.md)
- [SurveyResponseCreateRequest](docs/SurveyResponseCreateRequest.md)
- [SurveyResponseInput](docs/SurveyResponseInput.md)
- [SurveyResponseListItem](docs/SurveyResponseListItem.md)
- [SurveySettings](docs/SurveySettings.md)
- [SystemSetting](docs/SystemSetting.md)
- [SystemSettingUpdate](docs/SystemSettingUpdate.md)
- [TMListItem](docs/TMListItem.md)
- [Team](docs/Team.md)
- [TeamBase](docs/TeamBase.md)
- [TeamListItem](docs/TeamListItem.md)
- [TeamMember](docs/TeamMember.md)
- [TeamMemberRole](docs/TeamMemberRole.md)
- [Threat](docs/Threat.md)
- [ThreatBase](docs/ThreatBase.md)
- [ThreatBulkUpdateItem](docs/ThreatBulkUpdateItem.md)
- [ThreatInput](docs/ThreatInput.md)
- [ThreatModel](docs/ThreatModel.md)
- [ThreatModelBase](docs/ThreatModelBase.md)
- [ThreatModelInput](docs/ThreatModelInput.md)
- [TokenRefreshRequest](docs/TokenRefreshRequest.md)
- [TokenRevocationRequest](docs/TokenRevocationRequest.md)
- [TransferOwnershipRequest](docs/TransferOwnershipRequest.md)
- [TransferOwnershipResult](docs/TransferOwnershipResult.md)
- [TransferOwnershipResultSurveyResponsesTransferred](docs/TransferOwnershipResultSurveyResponsesTransferred.md)
- [TransferOwnershipResultThreatModelsTransferred](docs/TransferOwnershipResultThreatModelsTransferred.md)
- [TriageNote](docs/TriageNote.md)
- [TriageNoteBase](docs/TriageNoteBase.md)
- [TriageNoteInput](docs/TriageNoteInput.md)
- [TriageNoteListItem](docs/TriageNoteListItem.md)
- [UpdateAdminGroupRequest](docs/UpdateAdminGroupRequest.md)
- [UpdateAdminUserRequest](docs/UpdateAdminUserRequest.md)
- [UpdateDiagramMetadataByKeyRequest](docs/UpdateDiagramMetadataByKeyRequest.md)
- [UpdateInvocationStatusRequest](docs/UpdateInvocationStatusRequest.md)
- [UpdateInvocationStatusResponse](docs/UpdateInvocationStatusResponse.md)
- [UpdateThreatMetadataByKeyRequest](docs/UpdateThreatMetadataByKeyRequest.md)
- [User](docs/User.md)
- [UserAPIQuota](docs/UserAPIQuota.md)
- [UserGroupMembership](docs/UserGroupMembership.md)
- [UserQuotaUpdate](docs/UserQuotaUpdate.md)
- [UserWithAdminStatus](docs/UserWithAdminStatus.md)
- [WebhookDelivery](docs/WebhookDelivery.md)
- [WebhookEventType](docs/WebhookEventType.md)
- [WebhookQuota](docs/WebhookQuota.md)
- [WebhookQuotaUpdate](docs/WebhookQuotaUpdate.md)
- [WebhookSubscription](docs/WebhookSubscription.md)
- [WebhookSubscriptionInput](docs/WebhookSubscriptionInput.md)
- [WebhookTestRequest](docs/WebhookTestRequest.md)
- [WebhookTestResponse](docs/WebhookTestResponse.md)

<a id="documentation-for-authorization"></a>

## Documentation For Authorization

Authentication schemes defined for the API:
<a id="bearerAuth"></a>

### bearerAuth

- **Type**: Bearer authentication (JWT)

## Author

eric@tmi.dev
